# My-Fitst-Rag

./: .gitignore  pyproject.toml
notes/ai/: rag-guide.md  transformer.md
notes/database/: redis-interview.md
notes/java/: java-basis-interview.md  java-collection-interview.md
notes/programming/: python-tips.md
src/mycc/: __init__.py  api.py  cli.py  config.py  indexer.py  models.py  retriever.py  sync.py
