[project]
name = "mycc"
version = "0.1.0"
description = "AI-first personal knowledge base with RAG capabilities"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "lancedb>=0.17",
    "sentence-transformers>=3.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-frontmatter>=1.1",
    "pydantic>=2.10",
]

[project.scripts]
kb = "mycc.cli:app"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
